# ai-data-copilot

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/api/: __init__.py  chat.py  datasets.py
backend/app/core/: config.py
backend/app/insights/: __init__.py  anomalies.py  charts.py  models.py  profiling.py
backend/app/llm/: __init__.py  client.py  provider.py
backend/app/rag/: chunking.py  embeddings.py  vector_store.py
backend/app/schemas/: chat.py  datasets.py  rag.py
backend/app/services/: charts_service.py  chat_service.py  datasets.py  insights_service.py  rag.py  report_service.py
backend/tests/: test_chat.py  test_datasets.py  test_insights.py  test_rag.py
qdrant_data/: raft_state.json
