[project]
name = "ai-data-copilot-backend"
version = "0.1.0"
description = "Backend API for ai-data-copilot."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.1",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.6.0",
    "pytest>=8.1.1",
]

[tool.uvicorn]
factory = false
